Documentation edits made through Mintlify web editor

--- a/color.css
+++ b/color.css
@@ -1,2 +1,9 @@
 .michael { color: #3498db; font-weight: bold; }
+
 .franklin { color: #27ae60; font-weight: bold; }
+
+.trevor { color: #FFA500; font-weight: bold; }
+
+.brad { color: #FFDE21; font-weight:bold; }
+
+.drfriedlander { color: #9CBCE1; font-weight:bold; }
