Documentation edits made through Mintlify web editor

--- a/color.css
+++ b/color.css
@@ -7,3 +7,7 @@
 .brad { color: #FFDE21; font-weight:bold; }
 
 .drfriedlander { color: #9CBCE1; font-weight:bold; }
+
+.alternative { color: #212B33; font-weight:bold; }
+
+.missionfail { color: #8A0204; font-weight:bold; }
