Documentation edits made through Mintlify web editor

--- a/color.css
+++ b/color.css
@@ -11,3 +11,5 @@
 .alternative { color: #212B33; font-weight:bold; }
 
 .missionfail { color: #8A0204; font-weight:bold; }
+
+.npc { color: #7C7575; font-weight:bold; }
