Documentation edits made through Mintlify web editor

--- a/color.css
+++ b/color.css
@@ -8,6 +8,8 @@
 
 .drfriedlander { color: #9CBCE1; font-weight:bold; }
 
+.davenorton { color: #2E4051; font-weight:bold; }
+
 .alternative { color: #212B33; font-weight:bold; }
 
 .missionfail { color: #8A0204; font-weight:bold; }
