Documentation edits made through Mintlify web editor

--- a/color.css
+++ b/color.css
@@ -4,6 +4,8 @@
 
 .trevor { color: #FFA500; font-weight: bold; }
 
+.amanda { color: #C44A8B; font-weight:bold; }
+
 .brad { color: #FFDE21; font-weight:bold; }
 
 .drfriedlander { color: #9CBCE1; font-weight:bold; }
