Documentation edits made through Mintlify web editor

--- a/color.css
+++ b/color.css
@@ -4,16 +4,24 @@
 
 .trevor { color: #FFA500; font-weight: bold; }
 
-.amanda { color: #C44A8B; font-weight:bold; }
+.amanda { color: #C44A8B; font-weight: bold; }
 
-.brad { color: #FFDE21; font-weight:bold; }
+.denise { color: #429884; font-weight: bold; }
 
-.drfriedlander { color: #9CBCE1; font-weight:bold; }
+.jimmy { color: #5C1817; font-weoght: bold; }
 
-.davenorton { color: #2E4051; font-weight:bold; }
+.lamar { color: #023715; font-weight: bold; }
 
-.alternative { color: #212B33; font-weight:bold; }
+.simeon { color: #422D44; font-weight: bold; }
 
-.missionfail { color: #8A0204; font-weight:bold; }
+.brad { color: #FFDE21; font-weight: bold; }
 
-.npc { color: #7C7575; font-weight:bold; }
+.drfriedlander { color: #9CBCE1; font-weight: bold; }
+
+.davenorton { color: #2E4051; font-weight: bold; }
+
+.alternative { color: #212B33; font-weight: bold; }
+
+.missionfail { color: #8A0204; font-weight: bold; }
+
+.npc { color: #7C7575; font-weight: bold; }
